Fixing issue on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,10 @@ nav {
     width: 100%;
     background-color: #3ad;
     height: 30px;
-    display: -webkit-box;
+    display: -webkit-flex;
     -webkit-box-pack: start;
     -webkit-box-align: start;
-    /*align-items: stretch;*/
+    align-items: stretch;
 }
 
 nav a {
